# fairlearn-fhe

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
benchmarks/: bench_metrics.py
docs/: backends.md  benchmarks.md  changelog.md  index.md  metrics.md  quickstart.md  threat-model.md  trust-models.md
docs/api/: context.md  envelope.md  metric-frame.md  metrics.md
examples/: plot_encrypted_metrics.py  quickstart.ipynb  quickstart.py
src/fairlearn_fhe/: __init__.py  _circuits.py  _groups.py  audit.py  cli.py  context.py  encrypted.py  envelope.py
src/fairlearn_fhe/_backends/: __init__.py  openfhe_backend.py  tenseal_backend.py
src/fairlearn_fhe/metrics/: __init__.py  _base_metrics.py  _fairness_metrics.py  _make_derived_metric.py  _metric_frame.py  _per_rate_metrics.py  _regression_metrics.py  _scoring_metrics.py
tests/: conftest.py  test_backend_dispatch.py  test_base_metrics.py  test_cli.py  test_derived_metric.py  test_edge_cases.py  test_encrypted_ops.py  test_encrypted_sf.py  test_envelope.py  test_fairness_metrics.py  test_metric_frame.py  test_openfhe_backend.py  test_review_fixes.py  test_review_v0_2_3_fixes.py  test_review_v0_2_4_fixes.py  test_v0_2_1_coverage.py  test_v0_2_2_full_coverage.py  test_v0_2_cli_and_backend.py  test_v0_2_metrics.py
