[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairlearn-fhe"
version = "0.2.1"
description = "Drop-in encrypted (CKKS) Fairlearn metrics. Same API surface; ciphertext arithmetic via TenSEAL."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
authors = [
  { name = "Bader Alissaei", email = "b@vaultbytes.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "numpy>=1.26",
  "fairlearn>=0.10",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "tenseal>=0.3.14",
]

[project.optional-dependencies]
openfhe = [
  "openfhe>=1.2",
]
signing = [
  "cryptography>=42",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
  "build>=1.2",
  "twine>=5",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://github.com/BAder82t/fairlearn-fhe"
Repository = "https://github.com/BAder82t/fairlearn-fhe"
Issues  = "https://github.com/BAder82t/fairlearn-fhe/issues"
Documentation = "https://bader82t.github.io/fairlearn-fhe/"

[project.scripts]
fairlearn-fhe = "fairlearn_fhe.cli:main"
fairlearn-fhe-verify = "fairlearn_fhe.cli:main_verify_legacy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
